# 14_lectures_on_visual_slam

./: .gitignore  CMakeLists.txt  chapter_01_前言.ipynb  chapter_02_初识SLAM.ipynb  chapter_03_三维空间刚体运动.ipynb  chapter_04_李群与李代数.ipynb  chapter_05_相机与图像.ipynb  chapter_06_非线性优化.ipynb  chapter_07_视觉里程计1.ipynb
chapter_02/: CMakeLists.txt  build.sh  hello_slam.cpp  lib_hello_slam.cpp  lib_hello_slam.h  use_hello.cpp
chapter_03/: CMakeLists.txt  eigen_matrix.cpp  use_geometry.cpp
chapter_04/: CMakeLists.txt  use_sophus.cpp
chapter_05/: CMakeLists.txt  image_basics.cpp  join_map.cpp
chapter_06/: CMakeLists.txt  ceres_curve_fitting.cpp  main.cpp
